<resources>
    <string name="app_name">Столовая</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="icon">Icon</string>
    <string name="label_string_sample">Куриные крылышки в панировке</string>
    <string name="weight_sample">150г</string>
    <string name="cost_sample">145,50р</string>
    <string name="header_sample">Салаты</string>
    <string name="description_sample">Категория:\nВес:\nКалорийность:\nЦена:</string>
    <string name="description_properties_sample">Супы\n155г\n320ккал\n160р</string>
    <string name="description_basket_sample">Количество:\nВес:\nКалорийность:\nЦена:</string>
    <string name="description_basket_properties_sample">4\n250г\n332ккал\n155,50р</string>
    <string name="nutritional_value">Макроэлементы</string>
    <string name="fats">Жиры</string>
    <string name="proteins">Белки</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="procent_sample">28%</string>
    <string name="count_sample">1</string>
    <string name="total_header">Всего:</string>
    <string name="calories_sample">300ккал</string>
    <string name="about_food_title">О блюде</string>
    <string name="category">Категория: </string>
    <string name="weight">Вес: </string>
    <string name="calories">Калорийность: </string>
    <string name="cost">Цена: </string>
    <string name="gram">г</string>
    <string name="rub">р</string>
    <string name="ccal">ккал</string>
    <string name="basket">Корзина</string>
    <string name="count">Количество: </string>
    <string name="canteens">Столовые</string>
    <string name="empty_basket">Корзина пока пуста</string>
    <string name="about_canteen">О столовой</string>
    <string name="canteen_label_sample">Столовая ГЗ</string>
    <string name="working_time_description">ПН-ПТ:\nПерерыв:\nСБ:\nПерерыв:</string>
    <string name="working_time_description_no_saturday">ПН-ПТ:\nПерерыв:</string>
    <string name="working_time_sample">10:00-18:00\nНет\n11:30-16:00\n14:00-14:30</string>
    <string name="menu">Meню</string>
    <string name="filters">Фильтры</string>
    <string name="now_opened">Сейчас открыто</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="alphabet_sort">По алфавиту</string>
    <string name="group_sort">По разделам</string>
    <string name="cost_sort">По цене</string>
    <string name="calories_sort">По калорийности</string>
    <string name="canteen_not_working">Столовая не работает</string>
    <string name="vegan_only">Только вегитерианские блюда</string>
    <string name="no">Нет</string>
    <string name="not_working">Не работает</string>
    <string name="now_closed">Сейчас закрыто</string>
    <string name="clear_basket">Очистить корзину</string>
    <string name="composition">Состав</string>
    <string name="share">Поделиться</string>
    <string name="total_cost">Общая стоимость:</string>
    <string name="unit">шт.</string>
    <string name="background">background</string>


</resources>
