<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_editor_absoluteY="82dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackgroundBorderless">

        <ImageView
            android:id="@+id/foodTypeIcon"
            android:layout_width="45dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/icon"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_string_sample"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/foodTypeIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weigth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weight_sample"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/cost"
            app:layout_constraintStart_toEndOf="@+id/cost" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/calories_sample"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/cost"
            app:layout_constraintStart_toEndOf="@+id/weigth" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cost_sample"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="@+id/foodTypeIcon"
            app:layout_constraintStart_toEndOf="@+id/foodTypeIcon"
            app:layout_constraintTop_toBottomOf="@+id/label" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/addToBasketPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cost"
            app:layout_constraintTop_toTopOf="@+id/cost"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/minus"
                android:layout_width="24dp"
                android:layout_height="0dp"
                android:background="@drawable/little_minus"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toStartOf="@+id/count"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/plus"
                android:layout_width="24dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/little_plus"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/count"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/count_sample"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/plus"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>